# youclaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
agents/default/: agent.yaml
e2e/: playwright.config.ts
e2e/tests/: logs.spec.ts  multi-agent.spec.ts  navigation.spec.ts  skills.spec.ts  system.spec.ts
electron/main/: index.ts
scripts/: build-sidecar.mjs
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/agent/: abort-registry.ts  compiler.ts  hooks.ts  index.ts  manager.ts  mcp-utils.ts  prompt-builder.ts  queue.ts  router.ts  runtime.ts  schema.ts  secrets.ts  security.ts  templates.ts  types.ts
src/channel/: config-schema.ts  dingtalk.ts  factory.ts  feishu.ts  index.ts  manager.ts  qq.ts  router.ts  telegram.ts  types.ts  wecom.ts
src/config/: build-constants.ts  env.ts  paths.ts
src/db/: index.ts
src/document/: service.ts
src/events/: types.ts
src/logger/: broadcaster.ts  index.ts  reader.ts
src/memory/: index.ts  indexer.ts  manager.ts
tests/: agent-compiler.test.ts  agent-router.test.ts  browser-profiles-routes.test.ts  browser-profiles-sync.test.ts  channel-qq.test.ts  channel-router.test.ts  hooks-manager.test.ts  memory-enhanced.test.ts  routes-agents.test.ts  routes-messages.test.ts  routes-registry.test.ts  routes-skills.test.ts  routes-tasks.test.ts  scheduler.test.ts  secrets-security.test.ts  setup-light.ts  skills-enhanced.test.ts  skills-globs.test.ts  web-chat-store.test.ts
web/: package.json  vite.config.ts
(+101 files in other folders)
