[package]
name = "youclaw"
version = "1.0.0"
description = "Desktop AI assistant powered by Claude"
authors = ["CodePhiliaX"]
edition = "2021"

[lib]
name = "youclaw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
log = "0.4"
tauri-plugin-log = "2"
sys-locale = "0.3"

[profile.release]
strip = true
lto = "thin"
opt-level = "s"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
